--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @job do |f|
+= form_for @job, :html => {:multipart => true} do |f|
   - if @job.errors.any?
     #error_explanation
       %h2= "#{pluralize(@job.errors.count, "error")} prohibited this job from being saved:"
@@ -11,7 +11,7 @@
     = f.text_field :name
   .field
     = f.label :date
-    = f.date_select :date
+    = f.text_field :date
   .field
     = f.label :notes
     = f.text_area :notes
@@ -30,5 +30,7 @@
   .field
     = f.label :public
     = f.check_box :public
+  .field
+    = f.file_field :thumbnail
   .actions
     = f.submit 'Save'
