--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -29,5 +29,5 @@
       %td= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
-
+= paginate @jobs
 = link_to 'New Job', new_job_path
