--- a/app/views/shots/_form.html.haml
+++ b/app/views/shots/_form.html.haml
@@ -26,7 +26,7 @@
     = f.text_field :height
   .field
     = f.label :notes
-    = f.text_area :notes
+    = f.text_area :notes, :rows => "2"
   .field
     = f.label :printed
     = f.check_box :printed
