--- a/app/views/shots/_form.html.haml
+++ b/app/views/shots/_form.html.haml
@@ -8,7 +8,7 @@
 
   .field
     = f.label :date
-    = f.text_field :date
+    = f.text_field :date, class: 'datepicker'
   .field
     = f.label :description
     = f.text_field :description
