--- a/app/views/shots/_form.html.haml
+++ b/app/views/shots/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @shot do |f|
+= form_for @shot, :html => {:multipart => true} do |f|
   - if @shot.errors.any?
     #error_explanation
       %h2= "#{pluralize(@shot.errors.count, "error")} prohibited this shot from being saved:"
@@ -30,5 +30,8 @@
   .field
     = f.label :printed
     = f.check_box :printed
+  .field
+    = f.file_field :image
   .actions
-    = f.submit 'Save'
+    = f.hidden_field :job_id, value: @job.id
+    = f.submit 'Save', class: 'btn'
